--- a/compiler/HW1/makefile
+++ b/compiler/HW1/makefile
@@ -9,8 +9,8 @@ all: $(TARGET)
 $(TARGET): lex.yy.c
 	$(CC) -o $(TARGET) lex.yy.c -ll
 
-lex.yy.c: [Compiler2024]B11001035.l
-	flex [Compiler2024]B11001035.l
+lex.yy.c: [Compiler2024]B11001035-scanner.l
+	flex [Compiler2024]B11001035-scanner.l
 
 clean:
 	rm -f lex.yy.c $(TARGET)
